<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp" android:paddingRight="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:background="#8ECE33">
    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:background="#8ECE33"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="back3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="Subjects"
        android:gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-40dp"
        android:textStyle="bold"/>
    </LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textAppearance="?android:attr/textAppearanceMedium"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/detail_string"-->
<!--        android:textSize="25dp"-->
<!--        android:paddingTop="20dp"/>-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/date_string"/>

                <EditText

                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_date"
                    android:focusable="false"
                    android:imeOptions="flagNoExtractUi"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/subject_string"
                    />

                <AutoCompleteTextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:id="@+id/at_subject"
                    android:imeOptions="flagNoExtractUi"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/project_string"/>

                <AutoCompleteTextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:id="@+id/at_project"
                    android:imeOptions="flagNoExtractUi"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/time_string"
        android:textSize="25dp"
        android:paddingTop="20dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/start_string"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_start"
                    android:focusable="false"
                    android:imeOptions="flagNoExtractUi"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/end_string"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_end"
                    android:focusable="false"
                    android:imeOptions="flagNoExtractUi"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_actionAddTask"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:text="@string/add_string"
        android:background="#A8D688"/>


</LinearLayout>